--- a/pom.xml
+++ b/pom.xml
@@ -13,16 +13,16 @@
 
 	<repositories>
 		<repository>
-			<id>my-repo</id>
-			<url>http://repo.vil.so/nexus/content/repositories/thirdparty/</url>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
-			<artifactId>spigot-parent</artifactId>
-			<version>1.8-R0.1</version>
+			<artifactId>spigot-api</artifactId>
+			<version>1.8-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
