--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,19 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+		    <id>sonatype-nexus</id>
+		    <name>Internal Releases</name>
+		    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+		<snapshotRepository>
+		    <id>sonatype-nexus</id>
+		    <name>Internal Snapshots</name>
+		    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
