--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,27 @@
 	<version>1.3.5</version>
 	<name>MenuEngine</name>
 	<description>A base for bukkit menus</description>
+    <url>https://github.com/Vilsol/MenuEngine</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>Vilsol</id>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git@github.com:Vilsol/MenuEngine.git</connection>
+        <developerConnection>scm:git@github.com:Vilsol/MenuEngine.git</developerConnection>
+        <url>scm:git@github.com:Vilsol/MenuEngine.git</url>
+    </scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
