--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 before_install: "git clone -b travis `git config --get remote.origin.url` target/travis"
-script: "mvn deploy javadoc:jar source:jar gpg:sign --settings target/travis/settings.xml"
+script: "mvn deploy javadoc:jar source:jar --settings target/travis/settings.xml"
 language: java
 install: true
 matrix:
