--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,12 @@
 
     <distributionManagement>
         <repository>
-            <id>sonatype-nexus</id>
+            <id>sonatype-nexus-release</id>
             <name>Internal Releases</name>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
         <snapshotRepository>
-            <id>sonatype-nexus</id>
+            <id>sonatype-nexus-snapshot</id>
             <name>Internal Snapshots</name>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
